services/product/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goodfood-product
  labels:
    app: goodfood-product
spec:
  selector:
    matchLabels:
      app: goodfood-product
  template:
    metadata:
      labels:
        app: goodfood-product
    spec:
      containers:
        - name: goodfood-product
          image: pierrelbg/goodfood-product:1.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - containerPort: 3000
