services/product/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goodfood-product
spec:
  ingressClassName: nginx
  rules:
    - host: product.localdev.me
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: goodfood-product
                port:
                  number: 50004
            path: /
